#ifndef TEXT_BUFFER_H
#define TEXT_BUFFER_H

#include "containers/slice.h"
#include "unicode_symbol.h"
#include <iostream>

class TextBuffer {
  protected:
    Slice<Slice<UnicodeSymbol>> data;
    int current_pos_x = 0;
    int current_pos_y = 0;

    int prev_pos_x = 0;

    int top_screen_offset = 0;
    int right_screen_offset = 0;

  public:
    TextBuffer() {
        data = Slice<Slice<UnicodeSymbol>>();
    };
    ~TextBuffer() = default;

    int get_current_pos_x() const;
    int get_current_pos_y() const;

    void next_symbol();
    void prev_symbol();

    void next_word();
    void prev_word();

    void next_line();
    void prev_line();

    friend std::ostream &operator<<(std::ostream &os, TextBuffer &buf);
    friend std::istream &operator>>(std::istream &is, TextBuffer &buf);
};

#endif
